--- a/src/pages/settings.html
+++ b/src/pages/settings.html
@@ -981,7 +981,7 @@
                             <polyline points="12 19 5 12 12 5" />
                         </svg>
                     </button>
-                    <h2 class="text-2xl font-bold">Account information</h2>
+                    <h2 class="text-2xl font-bold">My Account</h2>
                 </div>
 
                 <div class="space-y-2">
